# openai_ale

./: README.md  setup.cfg
scripts/: mspacman_play.py  mspacman_plot.py  mspacman_train.py
src/mspacman_rl/learning/: agent.py
