[metadata]
name = openai_ale
version = 0.0.1
author = mick
author_email = micklangford@gmail.com
description = Experimental Reinforcement Learning for OpenAI ALE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    gym==0.15.7
    gym[atari]==0.15.7
    matplotlib
    numpy
    opencv-python
    pygame
    torch

[option.packages.find]
where = src
include =
    mspacman_rl*
